--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,43 @@
-altair==5.2.0
-appdirs==1.4.4
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-blinker==1.7.0
-brotlipy==0.7.0
-cachetools==5.3.2
-clyent==1.2.1
-conda-repo-cli==1.0.75
-conda-verify==3.4.2
-constantly==15.1.0
-cssselect==1.1.0
-daal4py==2023.1.1
-datashape==0.5.4
-et-xmlfile==1.1.0
-fonttools==4.25.0
-gitdb==4.0.11
-GitPython==3.1.40
-inflection==0.5.1
-jsonpointer==2.1
-mkl-service==2.4.0
-munkres==1.1.4
-openpyxl==3.0.10
-patsy==0.5.3
-pep8==1.7.1
-pipdeptree==2.13.1
-ply==3.11
-protobuf==4.25.1
-pyarrow==11.0.0
-pyasn1-modules==0.2.8
-pycurl==7.45.2
-pydeck==0.8.1b0
-PyDispatcher==2.0.5
-pyls-spyder==0.4.0
-PyQt5==5.15.7
-PyQtWebEngine==5.15.4
-python-lsp-jsonrpc==1.0.0
-pywin32==305.1
-queuelib==1.5.0
-rich==13.7.0
-scikit-learn-intelex==20230426.121932
-scipy==1.11.1
-smmap==5.0.1
-streamlit==1.29.0
-streamlit-lottie==0.0.5
-TBB==0.2
-tzlocal==5.2
-validators==0.22.0
-webencodings==0.5.1
-zstandard==0.19.0
+﻿asttokens==2.4.1
+colorama==0.4.6
+comm==0.2.0
+contourpy==1.2.0
+cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
+fonttools==4.46.0
+ipython==8.18.1
+ipywidgets==8.1.1
+jcopml==1.2.4
+jedi==0.19.1
+joblib==1.3.2
+jupyterlab-widgets==3.0.9
+kiwisolver==1.4.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+numpy==1.26.2
+packaging==23.2
+pandas==2.1.4
+parso==0.8.3
+patsy==0.5.4
+Pillow==10.1.0
+prompt-toolkit==3.0.41
+pure-eval==0.2.2
+pyaml==23.9.7
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+scikit-learn==1.3.2
+scikit-optimize==0.9.0
+scipy==1.11.4
+seaborn==0.13.0
+six==1.16.0
+stack-data==0.6.3
+statsmodels==0.14.0
+threadpoolctl==3.2.0
+traitlets==5.14.0
+tzdata==2023.3
+wcwidth==0.2.12
+widgetsnbextension==4.0.9
