--- a/dashboardheartdisease/requirements.txt
+++ b/dashboardheartdisease/requirements.txt
@@ -5,17 +5,20 @@ backports.weakref==1.0.post1
 blinker==1.7.0
 brotlipy==0.7.0
 cachetools==5.3.2
-clyent==1.2.1
+clyent==1.2.2
+conda-repo-cli==1.0.75
+conda-verify==3.4.2
 constantly==15.1.0
 cssselect==1.1.0
 daal4py==2023.1.1
-datashape==0.5.2
+datashape==0.5.4
 et-xmlfile==1.1.0
 fonttools==4.25.0
 gitdb==4.0.11
 GitPython==3.1.40
 inflection==0.5.1
 jsonpointer==2.1
+mkl-service==2.4.0
 munkres==1.1.4
 openpyxl==3.0.10
 patsy==0.5.3
